# backend/cmd/docs/swagger.yaml
@@ -70,7 +70,7 @@ paths:
       security:
       - BearerAuth: []
       tags:
-      - secure
+      - Deacons
   /deacons/{id}:
     get:
       description: Get A Detailed info of a specific deacon
@@ -96,7 +96,7 @@ paths:
       security:
       - BearerAuth: []
       tags:
-      - secure
+      - Deacons
   /deacons/history/{id}:
     get:
       description: Get All Services done by a deacon
@@ -122,7 +122,7 @@ paths:
       security:
       - BearerAuth: []
       tags:
-      - secure
+      - Deacons
   /user/login:
     post:
       consumes:
@@ -146,6 +146,8 @@ paths:
           description: Bad Request
         "401":
           description: Unauthorized
+      tags:
+      - User
   /user/register:
     post:
       consumes:
@@ -165,6 +167,8 @@ paths:
           description: Bad Request
         "500":
           description: Internal Server Error
+      tags:
+      - User
 securityDefinitions:
   BearerAuth:
     in: header
